welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:41: error: not found: value yellow
	setCouleurBrosse(yellow)
                         ^